# it_camp2023

./: LICENSE  README.md  docker-compose.yml  pom.xml
ci/: docker-compose.frontend.yml  docker-compose.yaml
docker/: Dockerfile  Frontend.Dockerfile
src/back/: app.py
src/back/bff/: app.py  config.py  requirements.txt
src/back/bff/models/: calc_request.py  ipr_calc_model.py  node_calc_model.py  vlp_calc_model.py
src/back/bff/redis_tools/: tools.py
src/back/bff/routers/: calc.py  request_helper.py
src/back/bff/utils/: hashing.py
src/back/ipr_service/: Dockerfile  README.md  docker-compose.yml  pom.xml
src/back/node/: app.py  requirements.txt
src/back/node/calculations/: intersection_point.py
src/back/node/models/: node_calc_model.py
src/back/node/routers/: intersection.py
src/back/pvt/: Dockerfile  app.py  requirements.txt
src/back/pvt/calculations/: pvt_params.py
src/back/pvt/models/: pvt_calc_model.py
src/back/pvt/routers/: pvt_calculation.py
src/back/vlp_service/: README.md  docker-compose.yml  pyproject.toml  requirements.txt
src/back/vlp_service/docker/: Dockerfile
src/back/vlp_service/src/: config.py  main.py
src/back/vlp_service/src/calculations/: pipe.py  vlp.py  well.py
src/back/vlp_service/src/routes/: vlp.py
src/back/vlp_service/src/schemas/: base.py
src/back/vlp_service/src/test_data/: test_response.json
src/frontend/: package-lock.json  package.json
src/frontend/api/NodalAnalysis/: nodalAnalysisService.ts
src/frontend/nginx/: nginx.conf
src/frontend/src/: App.css  App.tsx  index.tsx
(+35 files in other folders)
